[tool.poetry]
name = "python-experiments"
version = "0.1.0"
description = "Just some notebooks"
authors = ["dmcauslan <don@donmcauslan.ca>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
